# crm-agent

./: .env.example  .gitignore  Makefile  README.md  langgraph.json  pyproject.toml
docs/: TOOL_DESIGN.md
evals/: run_eval.py
scripts/: seed_hub.py
src/crm_agent/: agent.py  crm.py
src/crm_agent/utils/: middleware.py  tools.py
